--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="ccw.LEININGEN_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="classes"/>
 </classpath>
